@@ -1,3 +1,6 @@
+14/04/14 Julien Dutheil
+* Added --seed argument to BppApplication to set random seed.
+
 04/03/13 -*- Version 2.1.0 -*-
 
 06/02/13 Julien Dutheil
